add test data, add api endpoints, add swagger
